@@ -1,5 +1,5 @@
 server {
-  listen 80;
+  listen 7080;
   server_name {{ kibana_domain }};
   root /var/www/kibana;
 
