@@ -1,0 +1,18 @@
+---
+- name: MariaDB | Install package
+  apt: pkg={{ item }} state=installed
+  with_items:
+    - mariadb-server
+    - mariadb-client
+    - python-mysqldb
+  tags: mariadb
+
+- name: MariaDB | Open port 3306 but only from deploy server(s)
+  ufw: rule=allow port=3306 proto=tcp src={{item}} state=reloaded
+  with_items: deploy_servers
+  tags: postgresql
+
+- name: MariaDB | Start the service
+  service: name=mysql state=started enabled=true
+  tags: mariadb
+
