@@ -1,0 +1,5 @@
+---
+pg_admin_username: postgres
+pg_admin_password: pantagruel
+mariadb_admin_username: debian_sys_maint
+mariadb_admin_password: gargamelle
