@@ -3,9 +3,9 @@ bin-path: /usr/bin/gandalf-ssh
 # MongoDB connection settings. By default, Gandalf will connect on localhost
 # using the "gandalf" database. Uncomment and change to customize.
 #
-# database:
-#   url: 127.0.0.1:27017
-#   name: gandalf
+database:
+   url: 127.0.0.1:27017
+   name: gandalf
 
 # Git configuration.
 #
